<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearHomeTitle"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textHomeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:textColor="@color/Red_300"
            android:layout_gravity="center"
            android:text="Inicio" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/linearHomeTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp" >

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Violet_200"
                app:cardCornerRadius="5dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/textWhy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/cardview_light_background"
                            android:text="Presentación" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/cardview_light_background"
                            android:text="@string/description_presentation" />
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/imagePresentation"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:src="@mipmap/slide_img_1_foreground"
                        android:layout_gravity="center"
                        android:contentDescription="Imagen Presentación" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Violet_200"
                app:cardCornerRadius="5dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/textTitleWhy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/cardview_light_background"
                            android:text="¿Por qué nos eligen?" />

                        <TextView
                            android:id="@+id/textDescriptionWhy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/cardview_light_background"
                            android:text="@string/description_why" />
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/imageWhy"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:src="@mipmap/slide_img_2_foreground"
                        android:layout_gravity="center"
                        android:contentDescription="Imagen why" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Violet_200"
                app:cardCornerRadius="5dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/textTitleService"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/cardview_light_background"
                            android:text="@string/proserge_service" />

                        <TextView
                            android:id="@+id/textDescriptionService"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:textColor="@color/cardview_light_background"
                            android:text="@string/description_service" />
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/imageServicios"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:src="@mipmap/slide_img_3_foreground"
                        android:layout_gravity="center"
                        android:contentDescription="Imagen Servicios" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:backgroundTint="@color/Red_300"
                app:cardCornerRadius="5dp"
                android:layout_marginBottom="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="10dp">

                    <ImageView
                        android:id="@+id/imagePhone"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_phone"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/textPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"
                        android:lineSpacingExtra="4dp"
                        android:textColor="@color/white"
                        android:text="@string/contact_phone" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:backgroundTint="@color/Red_300"
                app:cardCornerRadius="5dp"
                android:layout_marginBottom="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="10dp">

                    <ImageView
                        android:id="@+id/imageMap"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_map"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/textMap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/white"
                        android:text="@string/proserge_map" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:backgroundTint="@color/Red_300"
                app:cardCornerRadius="5dp"
                android:layout_marginBottom="20dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="10dp">

                    <ImageView
                        android:id="@+id/imageEmail"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_mail"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/textEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/white"
                        android:lineSpacingExtra="4dp"
                        android:text="@string/proserge_emails" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>